--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
         </div>
         <div class="relation-image-div">
-            <img src="img/Profile-relation.png">
+            <img src="img/Personal2.svg">
         </div>
     </div>
     <div class="relation-tab-content" id="personal-third">
@@ -416,7 +416,7 @@
     <div class="compass-text">
         <span class="compass-text-title">Are you gonna go your way?</span>
         <span class="compass-text-description">Controlling your digital life, you keep your<br>real future in your hands</span>
-        <button class="gradient-button">GET INVITED</button>
+        <button onclick="document.getElementById('id01').style.display='block'" class="gradient-button">GET INVITED</button>
     </div>
 </div>
 <div class="footer-div">
@@ -429,6 +429,19 @@
     <div class="footer-copyright-div">
 
     </div>
+</div>
+<div id="id01" class="w3-modal">
+    <div class="w3-modal-content">
+
+            <span onclick="document.getElementById('id01').style.display='none'">&times;</span>
+        <div class="modal-email-input-div">
+        <div class="email-input-div">
+            <input type="text" placeholder="Email" class="email-enput">
+            <button class="gradient-button">GET INVITED</button>
+        </div>
+        </div>
+    </div>
+</div>
 </div>
 </body>
 <script type="application/javascript">
